--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <script type="text/javascript" src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -32,17 +35,9 @@
         <div id="main">
             <button class="openbtn" onclick="openNav()">☰</button>
         </div>
-    </div>
-    <p>Lorem, ipsum dolor s</p>
-    <h1>hellod-pewd-w-dw-dw</h1>
-    <h2>jfeofjepfqepojfopq</h2>
-    <h4>dwdkpwpdwpdlwldwpdpwp</h4>
-    <h1>efoekfoefpfefpefepoeofpf</h1>
-    <h1>dpefkerfmpweofefefkoeofkoepfeopfeokfe</h1>
-    <div style="padding: 15px 15px 2500px; font-size: 30px">
-        <p>
-            <b>This example demonstrates how to slide down a navbar when the user
-                starts to scroll the page.</b>
+    </div
+        <b>This example demonstrates how to slide down a navbar when the user
+             starts to scroll the page.</b>
         </p>
         <p>Scroll down this frame to see the effect!</p>
         <p>Scroll to the top to hide the navbar.</p>
