remove some style from html and make telegram , instagram , github icon hover looks better

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 </head>
 
 <body>
-    <div id="title-bar" class="countaner shadow-lg" style="background-color: rgb(20, 40, 80)">
-        <p class="display-4 text-center fw-normal text-white" style="position: relative; top: 20px">
+    <div id="title-bar" class=" title-bar countaner shadow-lg">
+        <div class="instagram"></div>
+        <p class="title-bar-text display-4 text-center fw-normal text-white">
             Jalinus
         </p>
-        <a class="github-icon" href="https://www.github.com/Taha-haghgoo/Jalinus" style="color: rgb(255, 255, 255)"><i
+        <a class="github-icon" href="https://www.github.com/Taha-haghgoo/Jalinus"><i
                 class="fa fa-github fs-2 pull-right"></i></a>
-        <a class="telegram-icon" href="https://www.telegram.com" style="color: rgb(0, 65, 186)"><i
+        <a class="telegram-icon" href="https://www.telegram.com"><i
                 class="fa fa-telegram fs-2 pull-right"></i></a>
-        <a class="instagram-icon" href="https://www.instagram.com" style="color: rgb(255, 255, 255)"><i
+        <a class="instagram-icon" href="https://www.instagram.com"><i
                 class="fa fa-instagram fs-2 pull-right"></i></a>
-
                 <div class="search-bar">
                     <div class="search-container">
                         <form action="/action_page.php">
@@ -30,7 +30,6 @@
                         </form>
                     </div>
                 </div>
-
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
             <a href="#"><i class="fa fa-home"></i> Home</a>
@@ -115,8 +114,8 @@
         dolorum esse qui, rerum deleniti ex enim,
         optio porro hic eum aperiam assumenda quisquam quas? Provident quasi magnam sed totam!</p>
 
-    <div class="countaner shadow-lg p-4" style="background-color: rgb(20, 40, 80)">
-        <p class="text-white fs-15 pull-left">
+    <div class="down-bar countaner shadow-lg p-4">
+        <p class="tarikh text-white fs-15 pull-left">
             1400-1401
         </p>
         <p class="text-white pull-right"><i class="fa fa-heart"> توسعه داده شده با </i></p>
