remove serach bar

--- a/index.html
+++ b/index.html
@@ -22,14 +22,6 @@
                 class="fa fa-telegram fs-2 pull-right"></i></a>
         <a class="instagram-icon" href="https://www.instagram.com"><i
                 class="fa fa-instagram fs-2 pull-right"></i></a>
-                <div class="search-bar">
-                    <div class="search-container">
-                        <form action="/action_page.php">
-                            <input type="text" placeholder="Search.." name="search">
-                            <button type="submit"><i class="fa fa-search"></i></button>
-                        </form>
-                    </div>
-                </div>
         <div id="mySidebar" class="sidebar">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
             <a href="#"><i class="fa fa-home"></i> Home</a>
@@ -115,11 +107,11 @@
         optio porro hic eum aperiam assumenda quisquam quas? Provident quasi magnam sed totam!</p>
 
     <div class="down-bar countaner shadow-lg p-4">
-        <p class="tarikh text-white fs-15 pull-left">
+        <p class="text-white pull-right"><i class="fa fa-heart"> توسعه داده شده با </i></p>
+        <p class="tarikh">
             1400-1401
         </p>
-        <p class="text-white pull-right"><i class="fa fa-heart"> توسعه داده شده با </i></p>
-        <p></p>
+        <a href="#">درباره ما</a>
     </div>
 </body>
 
