edit down bar and background color of login page

--- a/index.html
+++ b/index.html
@@ -106,13 +106,30 @@
         dolorum esse qui, rerum deleniti ex enim,
         optio porro hic eum aperiam assumenda quisquam quas? Provident quasi magnam sed totam!</p>
 
-    <div class="down-bar countaner shadow-lg p-4">
-        <p class="text-white pull-right"><i class="fa fa-heart"> توسعه داده شده با </i></p>
-        <p class="tarikh">
-            1400-1401
-        </p>
-        <a href="#">درباره ما</a>
+        <footer class="footer shadow-lg">
+            <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Jalinus</h4>
+                    <ul>
+                        <li><a href="#">about us</a></li>
+                        <li><a href="#">our services</a></li>
+                        <li><a href="#">privacy policy</a></li>
+                        <li><a href="#">magarita</a></li>
+                    </ul>
+                 </div>
+               <div class="footer-col">
+                <h4 class="text-center">follow us</h4>
+                <div class="social-links">
+                    <a href="#"><i class="fa fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
     </div>
+</footer>
 </body>
 
 </html>
