--- a/index.html
+++ b/index.html
@@ -3,35 +3,45 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script type="text/javascript" src="script.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/jquery-3.5.1.slim.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <div id="title-bar" class=" title-bar countaner shadow-lg">
-        <div class="instagram"></div>
-        <p class="title-bar-text display-4 text-center fw-normal text-white">
-            Jalinus
-        </p>
-        <a class="github-icon" href="https://www.github.com/Taha-haghgoo/Jalinus"><i
-                class="fa fa-github fs-2 pull-right"></i></a>
-        <a class="telegram-icon" href="https://www.telegram.com"><i
-                class="fa fa-telegram fs-2 pull-right"></i></a>
-        <a class="instagram-icon" href="https://www.instagram.com"><i
-                class="fa fa-instagram fs-2 pull-right"></i></a>
-        <div id="mySidebar" class="sidebar">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-            <a href="#"><i class="fa fa-home"></i> Home</a>
-            <a href="#"><i class="fa fa-globe"></i> Clients</a>
-            <a href="#"><i class="fa fa-envelope"></i> Contact</a>
-        </div>
-        <div id="main">
-            <button class="openbtn" onclick="openNav()">☰</button>
-        </div>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
+        <a class="navbar-brand" href="./index.html">Jalinus</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+        </ul>
+      </div>
+      <ul class="navbar-icon">
+      <li>
+          <a class="nav-item github-icon" href="https://www.github.com/Taha-haghgoo/Jalinus"><i
+                  class="fa fa-github fs-2 pull-right"></i></a>
+      </li>
+      <li>
+          <a class="nav-item telegram-icon" href="https://www.telegram.com"><i
+                  class="fa fa-telegram fs-2 pull-right"></i></a>
+      </li>
+      <li>
+          <a class="nav-item instagram-icon" href="https://www.instagram.com"><i
+                  class="fa fa-instagram fs-2 pull-right"></i></a>
+      </li>
+      </ul>
+      </nav>
     <b>This example demonstrates how to slide down a navbar when the user
         starts to scroll the page.</b>
     </p>
@@ -119,12 +129,6 @@
                     </ul>
                  </div>
                <div class="footer-col">
-                <h4 class="text-center">follow us</h4>
-                <div class="social-links">
-                    <a href="#"><i class="fa fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
             </div>
         </div>
