fix bugs (footer and icons)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>home</title>
 </head>
 
 <body>
@@ -27,24 +28,23 @@
             </li>
         </ul>
       </div>
-      <ul class="navbar-icon">
+      <ul class="navbar-icon size">
       <li>
           <a class="nav-item github-icon" href="https://www.github.com/Taha-haghgoo/Jalinus"><i
-                  class="fa fa-github fs-2 pull-right"></i></a>
+                  class="fa fa-lg fa-github pull-right"></i></a>
       </li>
       <li>
           <a class="nav-item telegram-icon" href="https://www.telegram.com"><i
-                  class="fa fa-telegram fs-2 pull-right"></i></a>
+                  class="fa fa-lg fa-telegram  pull-right"></i></a>
       </li>
       <li>
           <a class="nav-item instagram-icon" href="https://www.instagram.com"><i
-                  class="fa fa-instagram fs-2 pull-right"></i></a>
+                  class="fa fa-lg fa-instagram pull-right"></i></a>
       </li>
       </ul>
       </nav>
     <b>This example demonstrates how to slide down a navbar when the user
         starts to scroll the page.</b>
-    </p>
     <p>Scroll down this frame to see the effect!</p>
     <p>Scroll to the top to hide the navbar.</p>
     <p>
@@ -56,7 +56,6 @@
         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
         officia deserunt mollit anim id est laborum.
     </p>
-    </div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat laborum, accusamus,
         distinctio explicabo earum aliquam nisi dolore architecto nulla
         ipsam veniam! Accusamus deserunt nesciunt obcaecati doloribus. Voluptatum est voluptatem quas,
@@ -116,24 +115,11 @@
         dolorum esse qui, rerum deleniti ex enim,
         optio porro hic eum aperiam assumenda quisquam quas? Provident quasi magnam sed totam!</p>
 
-        <footer class="footer shadow-lg">
-            <div class="container">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Jalinus</h4>
-                    <ul>
-                        <li><a href="#">about us</a></li>
-                        <li><a href="#">our services</a></li>
-                        <li><a href="#">privacy policy</a></li>
-                        <li><a href="#">magarita</a></li>
-                    </ul>
-                 </div>
-               <div class="footer-col">
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+        <footer id="sticky-footer" class="flex-shrink-0 py-4 bg-dark text-white-50 shadow-lg">
+          <div class="container text-center">
+            <small></small>
+          </div>
+        </footer>
 </body>
 
 </html>
