--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <br />
     <div class="container my-4 pt-10">
       <div class="row">
-        <div class="col-lg-9">
+        <div class="col-lg-12">
           <div class="row" id="item-list">
-            <div class="item col-lg-4 col-md-6 mb-4">
+            <div class="item col-lg-3 col-md-6 mb-4">
               <div class="card h-100">
                 <a href="#"
                   ><img
@@ -86,7 +86,7 @@
               </div>
             </div>
 
-            <div class="item col-lg-4 col-md-6 mb-4">
+            <div class="item col-lg-3 col-md-6 mb-4">
               <div class="card h-100">
                 <a href="#"
                   ><img class="card-img-top" src="images/asus.jpg" alt="عکس "
@@ -104,7 +104,7 @@
               </div>
             </div>
 
-            <div class="item col-lg-4 col-md-6 mb-4">
+            <div class="item col-lg-3 col-md-6 mb-4">
               <div class="card h-100">
                 <a href="#"
                   ><img
@@ -125,13 +125,13 @@
               </div>
             </div>
 
-            <div class="item col-lg-4 col-md-6 mb-4">
+            <div class="item col-lg-3 col-md-6 mb-4">
               <div class="card h-100">
                 <a href="#"
                   ><img
                     class="card-img-top"
                     src="images/thinkpad.jpg"
-                    alt="عکس محصول"
+                    alt="عکس "
                 /></a>
                 <div class="card-body">
                   <h4 class="card-title">
